use local.props for sensitive strs

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 ### Project-specific ###
 examples/
-app/src/main/assets/
-**/PodcastIndexHeadersInterceptor.kt
+app/src/main/assets/*.rss
 
 ### Android ###
 # Gradle files
