--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,10 @@
 [versions]
+android-application = "8.3.2"
+kotlin = "1.9.23"
+ksp = "1.9.23-1.0.20"
+hilt = "2.51.1"
+
+
 coroutines-android = "1.7.3"
 retrofit = "2.11.0"
 okhttp = "4.12.0"
@@ -6,7 +12,6 @@ sqldelight = "2.0.1"
 moshi = "1.15.0"
 rssparser = "6.0.3"
 androidx-core = "1.12.0"
-hilt = "2.51"
 hilt-androidx = "1.2.0"
 work = "2.9.0"
 lifecycle = "2.7.0"
@@ -71,4 +76,9 @@ test-hilt-android-compiler  = { group = "com.google.dagger", name = "hilt-androi
 test-robolectric  = { group = "org.robolectric", name = "robolectric", version.ref = "robolectric" }
 
 [plugins]
+android-application = { id = "com.android.application", version.ref = "android-application" }
+kotlin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 
