--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 android-application = "8.4.1"
-kotlin = "1.9.23"
-ksp = "1.9.23-1.0.20"
+kotlin = "2.0.0"
+ksp = "2.0.0-1.0.21"
 hilt = "2.51.1"
 
 coroutines-android = "1.8.0"
@@ -19,7 +19,7 @@ activity-compose = "1.9.0"
 material3 = "1.2.1"
 destinations = "1.10.0"
 exoplayer = "1.3.1"
-coil = "2.4.0"
+coil = "2.6.0"
 junit = "4.13.2"
 robolectric = "4.11.1"
 
@@ -76,8 +76,9 @@ test-robolectric  = { group = "org.robolectric", name = "robolectric", version.r
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android-application" }
-kotlin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 
