--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -80,5 +80,6 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight"}
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 
