fix AS Koala build: sqldelight 2.1.0-snapshot

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,10 +4,10 @@ kotlin = "2.0.0"
 ksp = "2.0.0-1.0.21"
 hilt = "2.51.1"
 
-coroutines-android = "1.8.0"
+coroutines-android = "1.8.1"
 retrofit = "2.11.0"
 okhttp = "4.12.0"
-sqldelight = "2.0.2"
+sqldelight = "2.1.0-SNAPSHOT"
 moshi = "1.15.0"
 rssparser = "6.0.3"
 androidx-core = "1.13.1"
