--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ hilt = "2.51.1"
 coroutines-android = "1.8.1"
 retrofit = "2.11.0"
 okhttp = "4.12.0"
-sqldelight = "2.1.0-SNAPSHOT"
+sqldelight = "2.0.2"
 moshi = "1.15.0"
 rssparser = "6.0.3"
 androidx-core = "1.13.1"
