--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ local.properties
 # Log/OS Files
 *.log
 
+# Kotlin
+.kotlin/*
+
 # Android Studio generated files and folders
 captures/
 .externalNativeBuild/
