--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 android-application = "8.5.0"
-kotlin = "2.0.0"
-ksp = "2.0.0-1.0.21"
+kotlin = "1.9.23" #"2.0.0"
+ksp = "1.9.23-1.0.20" #"2.0.0-1.0.21"
 hilt = "2.51.1"
 
 coroutines = "1.8.1"
@@ -14,13 +14,13 @@ rssparser = "6.0.3"
 androidx-core = "1.13.1"
 hilt-androidx = "1.2.0"
 work = "2.9.0"
-lifecycle = "2.8.2"
-compose-bom = "2024.06.00"
+lifecycle = "2.8.1"
+compose-bom = "2024.05.00" #"2024.06.00"
 activity-compose = "1.9.0"
 material3 = "1.2.1"
 destinations = "1.10.0"
 exoplayer = "1.3.1"
-coil = "2.6.0"
+coil = "2.4.0"
 junit = "4.13.2"
 robolectric = "4.11.1"
 slf4j = "1.7.36"
