--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ destinations = "1.10.0"
 exoplayer = "1.3.1"
 coil = "2.4.0"
 junit = "4.13.2"
+turbine = "1.1.0"
 robolectric = "4.11.1"
 slf4j = "1.7.36"
 
@@ -76,6 +77,7 @@ debug-compose-ui-test-manifest  = { group = "androidx.compose.ui", name = "ui-te
 
 junit  = { group = "junit", name = "junit", version.ref = "junit" }
 coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "coroutines" }
+turbine = { group = "app.cash.turbine", name = "turbine", version.ref = "turbine" }
 sqldelight-test = { group = "app.cash.sqldelight", name = "sqlite-driver", version.ref = "sqldelight" }
 slf4j = { group = "org.slf4j", name = "slf4j-nop", version.ref = "slf4j"}
 hilt-test  = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "hilt" }
@@ -90,4 +92,3 @@ ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight"}
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
-
