--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,12 @@
 [versions]
 android-application = "8.5.0"
 kotlin = "1.9.23" #"2.0.0"
+kotlinCompilerExtension = "1.5.11"
 ksp = "1.9.23-1.0.20" #"2.0.0-1.0.21"
 hilt = "2.51.1"
+
+compileSdk = "34"
+minSdk = "28"
 
 coroutines = "1.8.1"
 retrofit = "2.11.0"
@@ -45,6 +49,7 @@ moshi  = { group = "com.squareup.moshi", name = "moshi-kotlin", version.ref = "m
 retrofit  = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 retrofit-moshi  = { group = "com.squareup.retrofit2", name = "converter-moshi", version.ref = "retrofit" }
 
+sqldelight-sql335 = { group = "app.cash.sqldelight", name = "sqlite-3-35-dialect", version.ref = "sqldelight" }
 sqldelight-driver  = { group = "app.cash.sqldelight", name = "android-driver", version.ref = "sqldelight" }
 sqldelight-coroutines  = { group = "app.cash.sqldelight", name = "coroutines-extensions", version.ref = "sqldelight" }
 
