--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,7 @@ activity-compose = "1.9.0"
 material3 = "1.2.1"
 destinations = "1.10.0"
 exoplayer = "1.3.1"
+androidx-graphics = "1.0.0"
 coil = "2.4.0"
 junit = "4.13.2"
 turbine = "1.1.0"
@@ -74,6 +75,7 @@ exoplayer-dash  = { group = "androidx.media3", name = "media3-exoplayer-dash", v
 media3-ui  = { group = "androidx.media3", name = "media3-ui", version.ref = "exoplayer" }
 media3-session  = { group = "androidx.media3", name = "media3-session", version.ref = "exoplayer" }
 
+androidx-graphics-core = { group = "androidx.graphics", name = "graphics-core", version.ref = "androidx-graphics" }
 coil  = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
 coil-compose  = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 
