--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Podcasts"
-        tools:targetApi="31">
+
+        tools:targetApi="31"
+        tools:ignore="UnusedAttribute"
+        android:enableOnBackInvokedCallback="true">
 
         <service
             android:name=".service.PlaybackService"
