--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,17 +18,17 @@ rssparser = "6.0.3"
 androidx-core = "1.13.1"
 hilt-androidx = "1.2.0"
 work = "2.9.0"
-lifecycle = "2.8.1"
-compose-bom = "2024.05.00" #"2024.06.00"
+lifecycle = "2.8.3"
+compose-bom = "2024.06.00" #"2024.06.00"
 activity-compose = "1.9.0"
 material3 = "1.2.1"
-destinations = "1.10.0"
+destinations = "1.10.2"
 exoplayer = "1.3.1"
 androidx-graphics = "1.0.0"
-coil = "2.4.0"
+coil = "2.6.0"
 junit = "4.13.2"
 turbine = "1.1.0"
-robolectric = "4.11.1"
+robolectric = "4.12.1"
 slf4j = "1.7.36"
 
 
@@ -60,6 +60,7 @@ rssparser  = { group = "com.prof18.rssparser", name = "rssparser", version.ref =
 
 androidx-core  = { group = "androidx.core", name = "core-ktx", version.ref = "androidx-core" }
 lifecycle-runtime  = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
+lifecycle-runtime-compose  = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycle" }
 lifecycle-viewmodel-compose  = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle" }
 activity-compose  = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 compose-foundation  = { group = "androidx.compose.foundation", name = "foundation" }
