barebones episode player (#30)
* notification manager

* cleanup

* switching machines

* coalesce local episode columns, update models

* player works with notif, handles config changes

* cleanup

* add episode to state

* needs cleanup but ui and episode state are separated

* cleanup

* add @UnstableApi to literally every fucking line in my god damn project. thanks, androidx!

* cleanup

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,16 +18,17 @@ rssparser = "6.0.3"
 androidx-core = "1.13.1"
 hilt-androidx = "1.2.0"
 work = "2.9.0"
-lifecycle = "2.8.1"
-compose-bom = "2024.05.00" #"2024.06.00"
+lifecycle = "2.8.3"
+compose-bom = "2024.06.00" #"2024.06.00"
 activity-compose = "1.9.0"
 material3 = "1.2.1"
-destinations = "1.10.0"
+destinations = "1.10.2"
 exoplayer = "1.3.1"
-coil = "2.4.0"
+androidx-graphics = "1.0.0"
+coil = "2.6.0"
 junit = "4.13.2"
 turbine = "1.1.0"
-robolectric = "4.11.1"
+robolectric = "4.12.1"
 slf4j = "1.7.36"
 
 
@@ -59,6 +60,7 @@ rssparser  = { group = "com.prof18.rssparser", name = "rssparser", version.ref =
 
 androidx-core  = { group = "androidx.core", name = "core-ktx", version.ref = "androidx-core" }
 lifecycle-runtime  = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
+lifecycle-runtime-compose  = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycle" }
 lifecycle-viewmodel-compose  = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle" }
 activity-compose  = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 compose-foundation  = { group = "androidx.compose.foundation", name = "foundation" }
@@ -74,6 +76,7 @@ exoplayer-dash  = { group = "androidx.media3", name = "media3-exoplayer-dash", v
 media3-ui  = { group = "androidx.media3", name = "media3-ui", version.ref = "exoplayer" }
 media3-session  = { group = "androidx.media3", name = "media3-session", version.ref = "exoplayer" }
 
+androidx-graphics-core = { group = "androidx.graphics", name = "graphics-core", version.ref = "androidx-graphics" }
 coil  = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
 coil-compose  = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 
