don't fetch feeds on launch, minimum 15 min wait

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ rssparser = "6.0.3"
 androidx-core = "1.13.1"
 hilt-androidx = "1.2.0"
 work = "2.9.0"
+datastore = "1.1.1"
 lifecycle = "2.8.3"
 compose-bom = "2024.06.00" #"2024.06.00"
 activity-compose = "1.9.0"
@@ -36,6 +37,7 @@ slf4j = "1.7.36"
 coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
 work = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work" }
+datastore-prefs = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
 
 hilt-android  = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-android-compiler  = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
