--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,7 @@ coroutines = "1.8.1"
 retrofit = "2.11.0"
 okhttp = "4.12.0"
 sqldelight = "2.0.2"
-moshi = "1.15.0"
+moshi = "1.15.1"
 timber = "5.0.1"
 rssparser = "6.0.3"
 androidx-core = "1.13.1"
@@ -20,7 +20,8 @@ hilt-androidx = "1.2.0"
 work = "2.9.0"
 datastore = "1.1.1"
 lifecycle = "2.8.3"
-compose-bom = "2024.06.00" #"2024.06.00"
+compose-bom = "2024.06.00"
+compose-beta = "1.7.0-beta05"
 activity-compose = "1.9.0"
 material3 = "1.2.1"
 destinations = "1.10.2"
@@ -65,10 +66,10 @@ lifecycle-runtime  = { group = "androidx.lifecycle", name = "lifecycle-runtime-k
 lifecycle-runtime-compose  = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycle" }
 lifecycle-viewmodel-compose  = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle" }
 activity-compose  = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
-compose-foundation  = { group = "androidx.compose.foundation", name = "foundation" }
-compose-ui  = { group = "androidx.compose.ui", name = "ui" }
-compose-ui-graphics  = { group = "androidx.compose.ui", name = "ui-graphics" }
-compose-ui-tooling-preview  = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
+compose-foundation  = { group = "androidx.compose.foundation", name = "foundation", version.ref = "compose-beta" }
+compose-ui  = { group = "androidx.compose.ui", name = "ui", version.ref = "compose-beta" }
+compose-ui-graphics  = { group = "androidx.compose.ui", name = "ui-graphics", version.ref = "compose-beta" }
+compose-ui-tooling-preview  = { group = "androidx.compose.ui", name = "ui-tooling-preview", version.ref = "compose-beta" }
 compose-material3  = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 compose-destinations  = { group = "io.github.raamcosta.compose-destinations", name = "ksp", version.ref = "destinations" }
 compose-destinations-animations-core  = { group = "io.github.raamcosta.compose-destinations", name = "animations-core", version.ref = "destinations" }
