--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,9 @@
 [versions]
-android-application = "8.5.0"
+android-application = "8.5.1"
 kotlin = "1.9.23" #"2.0.0"
 kotlinCompilerExtension = "1.5.11"
 ksp = "1.9.23-1.0.20" #"2.0.0-1.0.21"
+google-services = "4.4.2"
 hilt = "2.51.1"
 
 compileSdk = "34"
@@ -11,6 +12,8 @@ minSdk = "28"
 coroutines = "1.8.1"
 retrofit = "2.11.0"
 okhttp = "4.12.0"
+firebase = "33.1.2"
+play-services-auth = "21.2.0"
 sqldelight = "2.0.2"
 moshi = "1.15.1"
 timber = "5.0.1"
@@ -39,6 +42,12 @@ coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutin
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
 work = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work" }
 datastore-prefs = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
+
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref="firebase" }
+firebase-auth = { module = "com.google.firebase:firebase-auth" }
+firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
+firebase-firestore = { module = "com.google.firebase:firebase-firestore" }
+play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "play-services-auth" }
 
 hilt-android  = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-android-compiler  = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
@@ -100,6 +109,7 @@ android-application = { id = "com.android.application", version.ref = "android-a
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+google-services = { id = "com.google.gms.google-services", version.ref = "google-services" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight"}
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
