--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
 android-application = "8.5.1"
-kotlin = "1.9.23" #"2.0.0"
+kotlin = "2.0.0"
 kotlinCompilerExtension = "1.5.11"
-ksp = "1.9.23-1.0.20" #"2.0.0-1.0.21"
+ksp = "2.0.0-1.0.22"
 hilt = "2.51.1"
 
 compileSdk = "34"
