--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ lifecycle = "2.8.4"
 compose-bom = "2024.06.00"
 compose-beta = "1.7.0-beta06"
 activity-compose = "1.9.1"
+material = "1.4.0"
 material3 = "1.2.1"
 destinations = "1.10.2"
 exoplayer = "1.3.1"
@@ -70,6 +71,7 @@ compose-foundation  = { group = "androidx.compose.foundation", name = "foundatio
 compose-ui  = { group = "androidx.compose.ui", name = "ui", version.ref = "compose-beta" }
 compose-ui-graphics  = { group = "androidx.compose.ui", name = "ui-graphics", version.ref = "compose-beta" }
 compose-ui-tooling-preview  = { group = "androidx.compose.ui", name = "ui-tooling-preview", version.ref = "compose-beta" }
+compose-material = { module = "androidx.compose.material:material", version.ref = "material" }
 compose-material3  = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 compose-destinations  = { group = "io.github.raamcosta.compose-destinations", name = "ksp", version.ref = "destinations" }
 compose-destinations-animations-core  = { group = "io.github.raamcosta.compose-destinations", name = "animations-core", version.ref = "destinations" }
