--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,7 +26,6 @@ activity-compose = "1.9.1"
 material = "1.6.8"
 material3 = "1.2.1"
 destinations = "1.10.2"
-media = ".1.7.0"
 media3 = "1.4.0"
 androidx-graphics = "1.0.0"
 coil = "2.6.0"
@@ -77,12 +76,12 @@ compose-material3  = { group = "androidx.compose.material3", name = "material3",
 compose-destinations  = { group = "io.github.raamcosta.compose-destinations", name = "ksp", version.ref = "destinations" }
 compose-destinations-animations-core  = { group = "io.github.raamcosta.compose-destinations", name = "animations-core", version.ref = "destinations" }
 
-media-media-media-media = { module = "androidx.media:media", version.ref = "media" }
 exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3" }
-exoplayer-dash  = { group = "androidx.media3", name = "media3-exoplayer-dash", version.ref = "media3" }
+# TODO exoplayer-dash  = { group = "androidx.media3", name = "media3-exoplayer-dash", version.ref = "media3" }
+# TODO media3-something = { module = "androidx.media3:media3-exoplayer-smoothstreaming", version.ref = "media3" }
 media3-ui  = { group = "androidx.media3", name = "media3-ui", version.ref = "media3" }
 media3-session  = { group = "androidx.media3", name = "media3-session", version.ref = "media3" }
-media3-cast = { module = "androidx.media3:media3-cast", version.ref = "media3" }
+# TODO media3-cast = { module = "androidx.media3:media3-cast", version.ref = "media3" }
 
 androidx-graphics-core = { group = "androidx.graphics", name = "graphics-core", version.ref = "androidx-graphics" }
 coil  = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
