--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
-android-application = "8.7.0"
+android-application = "8.7.3"
 kotlin = "2.0.10"
 kotlinCompilerExtension = "1.5.15"
 ksp = "2.0.10-1.0.24"
 hilt = "2.51.1"
 
-compileSdk = "34"
+compileSdk = "35"
 minSdk = "28"
 
 coroutines = "1.8.1"
@@ -15,19 +15,19 @@ sqldelight = "2.0.2"
 moshi = "1.15.1"
 timber = "5.0.1"
 rssparser = "6.0.3"
-androidx-core = "1.13.1"
+androidx-core = "1.15.0"
 hilt-androidx = "1.2.0"
-work = "2.9.1"
+work = "2.10.0"
 datastore = "1.1.1"
-lifecycle = "2.8.4"
-compose-bom = "2024.06.00"
-compose-beta = "1.7.0-beta07"
-activity-compose = "1.9.1"
-material = "1.6.8"
-material3 = "1.2.1"
+lifecycle = "2.8.7"
+compose-bom = "2024.11.00"
+compose-beta = "1.7.5"
+activity-compose = "1.9.3"
+material = "1.7.5"
+material3 = "1.3.1"
 destinations = "1.10.2"
-media3 = "1.4.0"
-androidx-graphics = "1.0.0"
+media3 = "1.5.0"
+androidx-graphics = "1.0.2"
 coil = "2.7.0"
 junit = "4.13.2"
 turbine = "1.1.0"
